--- a/index.html
+++ b/index.html
@@ -3,10 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jayesh Gaur</title>
+    <title>Jayesh Gaur - Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        section {
+            padding: 20px 0;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Jayesh Gaur's Website!</h1>
-    <p>This is a simple webpage hosted for free using GitHub Pages.</p>
+    <header>
+        <div class="container">
+            <h1>Jayesh Gaur</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="about" class="container">
+        <h2>About Me</h2>
+        <p>Hello! I'm Jayesh Gaur, a passionate developer with experience in web development and software engineering. I enjoy creating innovative solutions and working on exciting projects. Feel free to explore my portfolio to see some of my work.</p>
+    </section>
+
+    <section id="projects" class="container">
+        <h2>Projects</h2>
+        <div>
+            <h3>Project 1</h3>
+            <p>Description of Project 1. Briefly describe what the project is about and your role in it.</p>
+        </div>
+        <div>
+            <h3>Project 2</h3>
+            <p>Description of Project 2. Briefly describe what the project is about and your role in it.</p>
+        </div>
+        <!-- Add more projects as needed -->
+    </section>
+
+    <section id="contact" class="container">
+        <h2>Contact</h2>
+        <p>If you would like to get in touch, please email me at <a href="mailto:jayesh@example.com">jayesh@example.com</a>.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Jayesh Gaur. All rights reserved.</p>
+    </footer>
 </body>
 </html>
